--- a/Lyyneheym/YuriLauncher/Forms/MainWindow.xaml
+++ b/Lyyneheym/YuriLauncher/Forms/MainWindow.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="Yuri Launcher" Height="332" Width="566" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+				TextOptions.TextFormattingMode="Display" TextOptions.TextRenderingMode="ClearType"
+        Title="Yuri Launcher" Height="332" Width="566" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" UseLayoutRounding="True">
   <Grid>
     <controls:MetroAnimatedSingleRowTabControl x:Name="tabControl" Height="301" controls:TabControlHelper.Transition="Left" controls:TabControlHelper.IsUnderlined="True" Margin="0,0,0,0">
       <TabItem Header="    系统    " controls:ControlsHelper.HeaderFontSize="22">
@@ -54,7 +55,7 @@
             <Canvas>
               <RadioButton x:Name="radioButton_Screen_Typing_1" Content="开启" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="True" Checked="radioButton_Screen_Typing_1_Checked"/>
               <RadioButton x:Name="radioButton_Screen_Typing_2" Content="关闭" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="77" Checked="radioButton_Screen_Typing_2_Checked"/>
-              <TextBlock Name="textblock_Screen_Typing" Padding="3" Text="菲涅爱伊泽塔&#13;伊泽塔爱菲涅公主" Background="FloralWhite" LineHeight="25" Width="158" Canvas.Top="119" Height="65" FontFamily="FZXiaoBiaoSong-B05S" FontSize="18"/>
+              <TextBlock Name="textblock_Screen_Typing" Padding="3" Text="菲涅爱伊泽塔&#13;伊泽塔爱菲涅公主" Background="FloralWhite" LineHeight="25" Width="158" Canvas.Top="119" Height="65" FontSize="18" FontFamily="FZXiaoBiaoSong-B05"/>
               <Slider x:Name="slider_Screen_Typing" Canvas.Left="10" Canvas.Top="35" Width="138" Maximum="200" Value="60" LargeChange="10" SmallChange="10" TickFrequency="10" ValueChanged="slider_Screen_Typing_ValueChanged" TickPlacement="BottomRight"/>
               <Label Content="快" Canvas.Top="17" Canvas.Left="-4"/>
               <Label Content="慢" Canvas.Top="17" Canvas.Left="136"/>
@@ -68,8 +69,8 @@
         <Grid Background="#FFFFFFFF">
           <GroupBox x:Name="groupBox_Sound_BGM" Header="背景音乐（BGM）音量" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Height="110" Width="220">
             <Canvas>
-              <Slider x:Name="slider_Sound_BGM" Canvas.Left="10" Canvas.Top="26" Width="188" SmallChange="1" Value="100" ValueChanged="slider_Sound_BGM_ValueChanged"/>
-              <Label x:Name="label_Sound_BGM" Content="100" FontSize="16" HorizontalContentAlignment="Center" Width="208"/>
+              <Slider x:Name="slider_Sound_BGM" Canvas.Left="10" Canvas.Top="26" Width="188" SmallChange="1" Value="60" ValueChanged="slider_Sound_BGM_ValueChanged"/>
+              <Label x:Name="label_Sound_BGM" Content="60" FontSize="16" HorizontalContentAlignment="Center" Width="208"/>
               <Button x:Name="button_Sound_BGM_Try" Width="27" Height="27" Content=" ▶" Foreground="SkyBlue" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" Canvas.Left="171" Canvas.Top="45" Click="button_Sound_BGM_Try_Click"/>
               <Button x:Name="button_Sound_BGM_TryEnd" Width="27" Height="27" Content="‖" Foreground="SkyBlue" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" Canvas.Left="136" Canvas.Top="45" Click="button_Sound_BGM_TryEnd_Click"/>
             </Canvas>
@@ -101,7 +102,28 @@
         </Grid>
       </TabItem>
       <TabItem Header="    键位    " controls:ControlsHelper.HeaderFontSize="22">
-        <Grid Background="#FFFFFFFF">
+        <Grid>
+          <Grid.Background>
+            <ImageBrush Stretch="Uniform" ImageSource="/Yuri.YuriLauncher;component/Resources/Keyset.png"/>
+          </Grid.Background>
+          <GroupBox x:Name="groupBox_Key_Rclick" Header="鼠标右键" HorizontalAlignment="Left" Margin="303,10,0,0" VerticalAlignment="Top" Height="77" Width="247">
+            <Canvas>
+              <RadioButton x:Name="radioButton_Rclick_1" Content="仅右键菜单" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+              <RadioButton x:Name="radioButton_Rclick_2" Content="舞台->右键菜单" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="116" Canvas.Top="10" IsChecked="True"/>
+            </Canvas>
+          </GroupBox>
+          <GroupBox x:Name="groupBox_Key_RollingBack" Header="鼠标滚轮" HorizontalAlignment="Left" Margin="303,94,0,0" VerticalAlignment="Top" Height="77" Width="247">
+            <Canvas>
+              <RadioButton x:Name="radioButton_RollingBack_1" Content="仅回滚" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsChecked="True"/>
+              <RadioButton x:Name="radioButton_RollingBack_2" Content="回滚与前进" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="116" Canvas.Top="10" IsEnabled="False"/>
+            </Canvas>
+          </GroupBox>
+          <GroupBox x:Name="groupBox_Key_Quickmove" Header="自动移动指针" HorizontalAlignment="Left" Margin="303,177,0,0" VerticalAlignment="Top" Height="77" Width="247">
+            <Canvas>
+              <RadioButton x:Name="radioButton_Quickmove_1" Content="启用" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" IsEnabled="False" />
+              <RadioButton x:Name="radioButton_Quickmove_2" Content="禁用" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.Left="116" Canvas.Top="10" IsChecked="True"/>
+            </Canvas>
+          </GroupBox>
         </Grid>
       </TabItem>
       <TabItem Header="    关于    " controls:ControlsHelper.HeaderFontSize="22">
@@ -111,7 +133,7 @@
           </Grid.Background>
           <Button x:Name="button_about_reference" Content="软件许可证" HorizontalAlignment="Left" Margin="475,229,0,0" VerticalAlignment="Top" Width="75" FontFamily="Microsoft YaHei UI" Foreground="DarkSlateBlue" Click="button_about_reference_Click" TabIndex="3"/>
           <Button x:Name="button_about_resources" Content="素材版权" HorizontalAlignment="Left" Margin="395,229,0,0" VerticalAlignment="Top" Width="75" FontFamily="Microsoft YaHei UI" Foreground="DarkSlateBlue" TabIndex="2"/>
-          <Button x:Name="button_about_nextpage" Width="27" Height="27" Content=" ▶" Foreground="SkyBlue" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" Margin="523,112,10,127" TabIndex="1"/>
+          <Button x:Name="button_about_nextpage" Width="27" Height="27" Content=" ▶" Foreground="SkyBlue" Style="{DynamicResource MahApps.Metro.Styles.MetroCircleButtonStyle}" Margin="525,109,8,128" TabIndex="1"/>
         </Grid>
       </TabItem>
     </controls:MetroAnimatedSingleRowTabControl>
