--- a/Lyyneheym/Lyyneheym/PageView/Stage3D.xaml
+++ b/Lyyneheym/Lyyneheym/PageView/Stage3D.xaml
@@ -2,35 +2,112 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Yuri.PageView"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
       Title="Stage3D">
-  <Grid>
-    
-    <Viewport3D Margin="0" Name="viewCube">
+    <Grid>
+        <!-- 3D视窗 -->
+        <Viewport3D>
+            <!-- 摄像机 -->
+            <Viewport3D.Camera>
+                <PerspectiveCamera Position="0, 0, 8" x:Name="ST3D_Camera"/>
+            </Viewport3D.Camera>
+            <!-- 3D模型 -->
+            <Viewport3D.Children>
+                <!-- 光源 -->
+                <ModelVisual3D x:Name="ST3D_Light">
+                    <ModelVisual3D.Content>
+                        <AmbientLight/>
+                    </ModelVisual3D.Content>
+                </ModelVisual3D>
+                <!-- Background容器组 -->
+                <ModelVisual3D x:Name="ST3D_Background_Group">
+                    <ModelVisual3D.Content>
+                        <Model3DGroup>
+                            <GeometryModel3D x:Name="ST3D_Background_Fore">
+                                <GeometryModel3D.Material>
+                                    <DiffuseMaterial Brush="Green"/>
+                                </GeometryModel3D.Material>
+                                <GeometryModel3D.Geometry>
+                                    <MeshGeometry3D Positions="-16,-9,-10  16,-9,-10  -16,9,-10  16,9,-10"
+                                                    TextureCoordinates="0,1 1,1 0,0 1,0"
+                                                    TriangleIndices="0,1,2 1,3,2"
+                                    />
+                                </GeometryModel3D.Geometry>
+                            </GeometryModel3D>
+                        </Model3DGroup>
+                    </ModelVisual3D.Content>
+                </ModelVisual3D>
+                <!-- Character容器组 -->
+                <ModelVisual3D x:Name="ST3D_Character_Group">
+                    <ModelVisual3D.Content>
+                        <Model3DGroup>
+                            <GeometryModel3D x:Name="F1">
+                                <GeometryModel3D.Material>
+                                    <DiffuseMaterial Brush="Green"/>
+                                </GeometryModel3D.Material>
+                                <GeometryModel3D.Geometry>
+                                    <MeshGeometry3D
+                                          Positions="-3.031 -4.252 0  1.031 -4.252 0  -3.031 1.652 0  1.031 1.652 0"
+                                          TextureCoordinates="0 1  1 1  0 0  1 0   "
+                                          TriangleIndices="0 1 2  1 3 2" />
+                                </GeometryModel3D.Geometry>
+                            </GeometryModel3D>
+                            <GeometryModel3D x:Name="F2">
+                                <GeometryModel3D.Material>
+                                    <DiffuseMaterial Brush="Green"/>
+                                </GeometryModel3D.Material>
+                                <GeometryModel3D.Geometry>
+                                    <MeshGeometry3D
+                                          Positions="-1.031 -4.252 0  3.031 -4.252 0  -1.031 1.652 0  3.031 1.652 0"
+                                          TextureCoordinates="0 1  1 1  0 0  1 0   "
+                                          TriangleIndices="0 1 2  1 3 2" />
+                                </GeometryModel3D.Geometry>
+                            </GeometryModel3D>
 
-      <Viewport3D.Camera>
-        <PerspectiveCamera x:Name="perspectiveCam" FieldOfView="59" Position="0.5,0.5,2" LookDirection="0,0,-1" UpDirection="0, 1, 0">
-          <PerspectiveCamera.Transform>
-            <RotateTransform3D x:Name="rot" CenterY="0.5" CenterX="0.5" CenterZ="-0.5">
-              <RotateTransform3D.Rotation>
-                <AxisAngleRotation3D x:Name="AxisAngleRot" Axis="0,1,0" Angle="0"/>
-              </RotateTransform3D.Rotation>
-            </RotateTransform3D>
-          </PerspectiveCamera.Transform>
-        </PerspectiveCamera>
-      </Viewport3D.Camera>
-      
-			<Viewport2DVisual3D>
-        <Image x:Name="imger" Visibility="Visible">
-					
-				</Image>
-			</Viewport2DVisual3D>
-		</Viewport3D>
+                            <GeometryModel3D x:Name="Fline">
+                                <GeometryModel3D.Material>
+                                    <DiffuseMaterial Brush="Green"/>
+                                </GeometryModel3D.Material>
+                                <GeometryModel3D.Geometry>
+                                    <MeshGeometry3D
+                                          Positions="-2.048 -0.144 4.9  2.048 -0.144 4.9  -2.048 0.144 4.9  2.048 0.144 4.9"
+                                          TextureCoordinates="0 1  1 1  0 0  1 0   "
+                                          TriangleIndices="0 1 2  1 3 2" />
+                                </GeometryModel3D.Geometry>
+                            </GeometryModel3D>
+                        </Model3DGroup>
+                    </ModelVisual3D.Content>
+                </ModelVisual3D>
+                <!-- Picture容器组 -->
+                <ModelVisual3D x:Name="ST3D_Fronter_Group">
+                    <ModelVisual3D.Content>
+                        <Model3DGroup>
+                            <GeometryModel3D x:Name="PP1">
+                                <GeometryModel3D.Material>
+                                    <DiffuseMaterial Brush="Green"/>
+                                </GeometryModel3D.Material>
+                                <GeometryModel3D.Geometry>
+                                    <MeshGeometry3D Positions="-3.2,-1,4  3.2,-1,4  -3.2,1,4  3.2,1,4"
+                                                    TextureCoordinates="0,1 1,1 0,0 1,0"
+                                                    TriangleIndices="0,1,2 1,3,2"
+                                    />
+                                </GeometryModel3D.Geometry>
+                            </GeometryModel3D>
+                        </Model3DGroup>
+                    </ModelVisual3D.Content>
+                </ModelVisual3D>
+            </Viewport3D.Children>
+        </Viewport3D>
 
-    <Button Content="233" Width="150" Height="50" Margin="10,10,1120,660" Click="Button_Click"/>
-
-  </Grid>
+        <!-- Debug按钮 -->
+        <Button Content="233" Width="150" Height="50" Margin="10,10,1120,660" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="10,79,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="11,161,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_4"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="141,161,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="75,137,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_5"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="75,185,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_6"/>
+    </Grid>
 </Page>
