--- a/Lyyneheym/Lyyneheym/PageView/Stage3D.xaml
+++ b/Lyyneheym/Lyyneheym/PageView/Stage3D.xaml
@@ -6,108 +6,127 @@
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="1280"
       Title="Stage3D">
-    <Grid>
-        <!-- 3D视窗 -->
-        <Viewport3D>
-            <!-- 摄像机 -->
-            <Viewport3D.Camera>
-                <PerspectiveCamera Position="0, 0, 8" x:Name="ST3D_Camera"/>
-            </Viewport3D.Camera>
-            <!-- 3D模型 -->
-            <Viewport3D.Children>
-                <!-- 光源 -->
-                <ModelVisual3D x:Name="ST3D_Light">
-                    <ModelVisual3D.Content>
-                        <AmbientLight/>
-                    </ModelVisual3D.Content>
-                </ModelVisual3D>
-                <!-- Background容器组 -->
-                <ModelVisual3D x:Name="ST3D_Background_Group">
-                    <ModelVisual3D.Content>
-                        <Model3DGroup>
-                            <GeometryModel3D x:Name="ST3D_Background_Fore">
-                                <GeometryModel3D.Material>
-                                    <DiffuseMaterial Brush="Green"/>
-                                </GeometryModel3D.Material>
-                                <GeometryModel3D.Geometry>
-                                    <MeshGeometry3D Positions="-16,-9,-10  16,-9,-10  -16,9,-10  16,9,-10"
-                                                    TextureCoordinates="0,1 1,1 0,0 1,0"
-                                                    TriangleIndices="0,1,2 1,3,2"
-                                    />
-                                </GeometryModel3D.Geometry>
-                            </GeometryModel3D>
-                        </Model3DGroup>
-                    </ModelVisual3D.Content>
-                </ModelVisual3D>
-                <!-- Character容器组 -->
-                <ModelVisual3D x:Name="ST3D_Character_Group">
-                    <ModelVisual3D.Content>
-                        <Model3DGroup>
-                            <GeometryModel3D x:Name="F1">
-                                <GeometryModel3D.Material>
-                                    <DiffuseMaterial Brush="Green"/>
-                                </GeometryModel3D.Material>
-                                <GeometryModel3D.Geometry>
-                                    <MeshGeometry3D
-                                          Positions="-3.031 -4.252 0  1.031 -4.252 0  -3.031 1.652 0  1.031 1.652 0"
-                                          TextureCoordinates="0 1  1 1  0 0  1 0   "
-                                          TriangleIndices="0 1 2  1 3 2" />
-                                </GeometryModel3D.Geometry>
-                            </GeometryModel3D>
-                            <GeometryModel3D x:Name="F2">
-                                <GeometryModel3D.Material>
-                                    <DiffuseMaterial Brush="Green"/>
-                                </GeometryModel3D.Material>
-                                <GeometryModel3D.Geometry>
-                                    <MeshGeometry3D
-                                          Positions="-1.031 -4.252 0  3.031 -4.252 0  -1.031 1.652 0  3.031 1.652 0"
-                                          TextureCoordinates="0 1  1 1  0 0  1 0   "
-                                          TriangleIndices="0 1 2  1 3 2" />
-                                </GeometryModel3D.Geometry>
-                            </GeometryModel3D>
+    <Grid Background="Black">
+        <Canvas Name="BO_MainGrid" Background="Black" Left="0" Top="0" Height="720" Width="1280">
+            <!-- 3D视窗 -->
+            <Viewport3D x:Name="ST3D_Viewport" Height="720" Width="1280" Panel.ZIndex="0">
+                <!-- 摄像机 -->
+                <Viewport3D.Camera>
+                    <PerspectiveCamera Position="0, 0, 8" x:Name="ST3D_Camera"/>
+                </Viewport3D.Camera>
+                <!-- 3D模型 -->
+                <Viewport3D.Children>
+                    <!-- 光源 -->
+                    <ModelVisual3D x:Name="ST3D_Light">
+                        <ModelVisual3D.Content>
+                            <AmbientLight/>
+                        </ModelVisual3D.Content>
+                    </ModelVisual3D>
+                    <!-- Background容器组 -->
+                    <ModelVisual3D x:Name="ST3D_Background_Container">
+                        <ModelVisual3D.Content>
+                            <Model3DGroup x:Name="ST3D_Background_Group">
+                                <GeometryModel3D x:Name="ST3D_Background_Fore">
+                                    <GeometryModel3D.Material>
+                                        <DiffuseMaterial Brush="Green"/>
+                                    </GeometryModel3D.Material>
+                                    <GeometryModel3D.Geometry>
+                                        <MeshGeometry3D Positions="-16,-9,-8  16,-9,-8  -16,9,-8  16,9,-8"
+                                                        TextureCoordinates="0,1 1,1 0,0 1,0"
+                                                        TriangleIndices="0,1,2 1,3,2"
+                                        />
+                                    </GeometryModel3D.Geometry>
+                                </GeometryModel3D>
+                            </Model3DGroup>
+                        </ModelVisual3D.Content>
+                    </ModelVisual3D>
+                    <!-- Character容器组 -->
+                    <ModelVisual3D x:Name="ST3D_Character_Container">
+                        <ModelVisual3D.Content>
+                            <Model3DGroup x:Name="ST3D_Character_Group">
+                                <GeometryModel3D x:Name="F1">
+                                    <GeometryModel3D.Material>
+                                        <DiffuseMaterial Brush="Green"/>
+                                    </GeometryModel3D.Material>
+                                    <GeometryModel3D.Geometry>
+                                        <MeshGeometry3D
+                                              Positions="-3.031 -4.252 0  1.031 -4.252 0  -3.031 1.652 0  1.031 1.652 0"
+                                              TextureCoordinates="0 1  1 1  0 0  1 0   "
+                                              TriangleIndices="0 1 2  1 3 2" />
+                                    </GeometryModel3D.Geometry>
+                                </GeometryModel3D>
+                                <GeometryModel3D x:Name="F2">
+                                    <GeometryModel3D.Material>
+                                        <DiffuseMaterial Brush="Green"/>
+                                    </GeometryModel3D.Material>
+                                    <GeometryModel3D.Geometry>
+                                        <MeshGeometry3D
+                                              Positions="-1.031 -4.252 0  3.031 -4.252 0  -1.031 1.652 0  3.031 1.652 0"
+                                              TextureCoordinates="0 1  1 1  0 0  1 0   "
+                                              TriangleIndices="0 1 2  1 3 2" />
+                                    </GeometryModel3D.Geometry>
+                                </GeometryModel3D>
 
-                            <GeometryModel3D x:Name="Fline">
-                                <GeometryModel3D.Material>
-                                    <DiffuseMaterial Brush="Green"/>
-                                </GeometryModel3D.Material>
-                                <GeometryModel3D.Geometry>
-                                    <MeshGeometry3D
-                                          Positions="-2.048 -0.144 4.9  2.048 -0.144 4.9  -2.048 0.144 4.9  2.048 0.144 4.9"
-                                          TextureCoordinates="0 1  1 1  0 0  1 0   "
-                                          TriangleIndices="0 1 2  1 3 2" />
-                                </GeometryModel3D.Geometry>
-                            </GeometryModel3D>
-                        </Model3DGroup>
-                    </ModelVisual3D.Content>
-                </ModelVisual3D>
-                <!-- Picture容器组 -->
-                <ModelVisual3D x:Name="ST3D_Fronter_Group">
-                    <ModelVisual3D.Content>
-                        <Model3DGroup>
-                            <GeometryModel3D x:Name="PP1">
-                                <GeometryModel3D.Material>
-                                    <DiffuseMaterial Brush="Green"/>
-                                </GeometryModel3D.Material>
-                                <GeometryModel3D.Geometry>
-                                    <MeshGeometry3D Positions="-3.2,-1,4  3.2,-1,4  -3.2,1,4  3.2,1,4"
-                                                    TextureCoordinates="0,1 1,1 0,0 1,0"
-                                                    TriangleIndices="0,1,2 1,3,2"
-                                    />
-                                </GeometryModel3D.Geometry>
-                            </GeometryModel3D>
-                        </Model3DGroup>
-                    </ModelVisual3D.Content>
-                </ModelVisual3D>
-            </Viewport3D.Children>
-        </Viewport3D>
-
-        <!-- Debug按钮 -->
-        <Button Content="233" Width="150" Height="50" Margin="10,10,1120,660" Click="Button_Click"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="10,79,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="11,161,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_4"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="141,161,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="75,137,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_5"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="75,185,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_6"/>
+                                <GeometryModel3D x:Name="Fline">
+                                    <GeometryModel3D.Material>
+                                        <DiffuseMaterial Brush="Green"/>
+                                    </GeometryModel3D.Material>
+                                    <GeometryModel3D.Geometry>
+                                        <MeshGeometry3D
+                                              Positions="-2.048 -0.144 4.9  2.048 -0.144 4.9  -2.048 0.144 4.9  2.048 0.144 4.9"
+                                              TextureCoordinates="0 1  1 1  0 0  1 0   "
+                                              TriangleIndices="0 1 2  1 3 2" />
+                                    </GeometryModel3D.Geometry>
+                                </GeometryModel3D>
+                            </Model3DGroup>
+                        </ModelVisual3D.Content>
+                    </ModelVisual3D>
+                    <!-- Frontier容器组 -->
+                    <ModelVisual3D x:Name="ST3D_Frontier_Container">
+                        <ModelVisual3D.Content>
+                            <Model3DGroup x:Name="ST3D_Frontier_Group">
+                                <GeometryModel3D x:Name="ST3D_Frontier_1">
+                                    <GeometryModel3D.Material>
+                                        <DiffuseMaterial Brush="Transparent"/>
+                                    </GeometryModel3D.Material>
+                                    <GeometryModel3D.Geometry>
+                                        <MeshGeometry3D Positions="-3.2,-1,4  3.2,-1,4  -3.2,1,4  3.2,1,4"
+                                                        TextureCoordinates="0,1 1,1 0,0 1,0"
+                                                        TriangleIndices="0,1,2 1,3,2"
+                                        />
+                                    </GeometryModel3D.Geometry>
+                                </GeometryModel3D>
+                            </Model3DGroup>
+                        </ModelVisual3D.Content>
+                    </ModelVisual3D>
+                </Viewport3D.Children>
+            </Viewport3D>
+            <!-- Information -->
+            <Grid Name="BO_Information" VerticalAlignment="Top" HorizontalAlignment="Right" Canvas.Top="40" Canvas.Right="-400" Width="264" Height="71" Opacity="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="7*"/>
+                </Grid.ColumnDefinitions>
+                <Image Name="BO_Information_Image" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Margin="5"></Image>
+                <Grid Grid.Row="0" Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="50*"/>
+                        <RowDefinition Height="5*"/>
+                        <RowDefinition Height="45*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Name="BO_Information_Name" Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom" FontSize="18"></TextBlock>
+                    <TextBlock Name="BO_Information_Detail" Grid.Row="2" Grid.Column="0" VerticalAlignment="Top" FontSize="11" TextWrapping="Wrap"></TextBlock>
+                </Grid>
+            </Grid>
+            <!-- Debug按钮 -->
+            <Button Content="233" Width="150" Height="50" Margin="10,10,1120,660" Click="Button_Click"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="10,79,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="11,161,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_4"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="141,161,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="75,137,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_5"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="75,185,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_6"/>
+            <Button Content="Button" HorizontalAlignment="Left" Margin="10,255,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_7"/>
+        </Canvas>
     </Grid>
 </Page>
